[package]
name = "rusty_chain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0.13"
deadqueue = { version = "0.2.4", features = ["unlimited"] }
tokio = { version = "1.29.1", features = ["full"] }
async-trait = "0.1.71"