[package]
name = "rusty_chain"
version = "0.1.0"
edition = "2021"
authors = ["Austin Heller"]
description = "This library abstracts over functional processing units called `chain links`. Each `link` in the `chain` is meant to be independent, immutable, idempotent, and highly testable."
readme = "README.md"
repository = "https://github.com/AustinHeller/RustyChain"
license = "MIT OR Apache-2.0"
keywords = ["async", "framework", "macros", "data-structures", "queue"]
categories = ["concurrency", "data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0.13"
deadqueue = { version = "0.2.4", features = ["unlimited"] }
tokio = { version = "1.29.1", features = ["full"] }
async-trait = "0.1.71"