[package]
name = "rusty_chain"
version = "0.1.8"
edition = "2021"
authors = ["Austin Heller"]
description = "This library abstracts over functional processing units called `chain links`. Each link in the chain is meant to be independent, immutable, idempotent, and highly testable."
readme = "README.md"
repository = "https://github.com/AustinHeller/RustyChain"
license = "MIT OR Apache-2.0"
keywords = ["async", "framework", "macros", "data-structures", "queue"]
categories = ["concurrency", "data-structures"]

[dependencies]
paste = "1.0.13"
async-trait = "0.1.71"
futures = "0.3.28"
tokio = { version = "1.29.1", features = ["full"] }

[dev-dependencies]
tempfile = "3.6.0"
nom = "7.1.3"
rand = "0.8.5"
chrono = "0.4.26"